updating for checking changes

--- a/test_page/index.html
+++ b/test_page/index.html
@@ -120,7 +120,7 @@
             </div>
             <div id="slide-3-image-slide">
 
-<!--             <div class="slide-class">
+            <div class="slide-class">
                 <div class="image-cover">
                     <img  src="image/slide1.jpg" alt="slide 1">
                 </div>
@@ -130,7 +130,7 @@
                 <div class="image-cover">
                     <img  src="image/slide3.jpg" alt="slide 1">
                 </div>
-                </div> -->
+                </div>
             </div>
             <br><br>
         </div>
@@ -189,12 +189,12 @@
                 <div class="text-xs-left col-xs-7 col-sm-5 col-md-5 col-lg-5">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h5>Front-end Engineer</h5>
+                            <a class="job-link" href="form.html"><h5>Front-end Engineer</h5></a>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <h5>Back-end Engineer</h5>
+                        <a class="job-link" href="form.html"><h5>Back-end Engineer</h5></a>
                         </div>
                     </div>
                 </div>
@@ -210,7 +210,7 @@
                 <div class="text-xs-left col-xs-7 col-sm-5 col-md-5 col-lg-5">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h5>Account Manager</h5>
+                            <a class="job-link" href="form.html"><h5>Account Manager</h5></a>
                         </div>
                     </div>
                 </div>
@@ -226,7 +226,7 @@
                 <div class="text-xs-left col-xs-7 col-sm-5 col-md-5 col-lg-5">
                     <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h5>Customer Relationship</h5>
+                            <a class="job-link" href="form.html"><h5>Customer Relationship</h5></a>
                         </div>
                     </div>
                 </div>
@@ -269,7 +269,7 @@
                 slidesToShow: 1,
                 centerMode: true,
                 centerPadding: "50px",
-                // focusOnSelect: true,
+                focusOnSelect: true,
                 variableWidth: true,
             });
         });
