--- a/test_page/slick-1.5.9/temp5.html
+++ b/test_page/slick-1.5.9/temp5.html
@@ -26,19 +26,18 @@
                 /*width: 100%;*/
                 margin-top: 10px;
                 margin-bottom: 10px;
-                padding: 0px;
+                /*padding: 0px;*/
                 box-shadow: 1px 1px 200px 1px #000;
             }
             .slick-active, .slick-current, .slick-center{
                 padding: 0px;
                 background: none;
-                width: 500px;
+                /*width: 500px;*/
             }
             .slick-list {
-                overflow: visible;
+                /*overflow: auto;*/
             }
             .slick-slide{
-                z-index: -1;
                 width: 7%;
             }
         </style>
@@ -70,7 +69,6 @@
                 centerPadding: "50px",
                 focusOnSelect: true,
                 variableWidth: true,
-                responsive: "unslick"
             });
         });
 
