--- a/test_page/form.html
+++ b/test_page/form.html
@@ -21,24 +21,28 @@
         </div>
         <div class="container jf">
             <form>
+            <!-- first name -->
                 <div class="form-group row">
                     <label for="firstname" class="col-sm-2 form-control-label">First Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="firstname" placeholder="First name">
+                        <input type="text" class="form-control" id="firstname" placeholder="">
                     </div>
                 </div>
+            <!-- Last name -->
                 <div class="form-group row">
                     <label for="lastname" class="col-sm-2 form-control-label">Last Name</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="lastname" placeholder="Last Name">
+                        <input type="text" class="form-control" id="lastname" placeholder="">
                     </div>
                 </div>
+            <!-- Email -->
                 <div class="form-group row">
                     <label for="inputEmail3" class="col-sm-2 form-control-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+                        <input type="email" class="form-control" id="inputEmail3" placeholder="">
                     </div>
                 </div>
+            <!-- Phone number -->
                 <div class="form-group row">
                     <label for="phone" class="col-sm-2 form-control-label">Phone Number</label>
                     <div class="col-sm-10">
@@ -46,32 +50,79 @@
                         <input type="tel" class="form-control" id="phonenumber" placeholder="">
                     </div>
                 </div>
+            <!-- location -->
                 <div class="form-group row">
                     <label for="location" class="col-sm-2 form-control-label">Location</label>
                     <div class="col-sm-10">
-
-                        <input type="tel" class="form-control" id="phonenumber" placeholder="">
+                        <input type="text" class="form-control" id="location" placeholder="">
                     </div>
                 </div>
+            <!-- resume -->
                 <div class="form-group row">
-                    <label for="location" class="col-sm-2 form-control-label">Location</label>
-                    <div class="col-sm-10">
-
-                        <input type="tel" class="form-control" id="phonenumber" placeholder="">
+                    <label for="resume" class="col-sm-2 form-control-label">Resume/CV</label>
+                    <div class="col-sm-4">
+                    <label class="file">
+                      <input type="file" id="file">
+                      <span class="file-custom"></span>
+                    </label>
+                    </div>
+                    <div class="col-sm-6">
+                    <small class="text-muted">PDF and DOCX format are accepted</small>
                     </div>
                 </div>
+            <!-- Cover letter -->
                 <div class="form-group row">
-                    <label for="location" class="col-sm-2 form-control-label">Location</label>
+                    <label for="coverletter" class="col-sm-2 form-control-label"></label>
                     <div class="col-sm-10">
-
-                        <input type="tel" class="form-control" id="phonenumber" placeholder="">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        Why do you want to join Cozee ?
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                        </div>
+                    </div>
                     </div>
                 </div>
+                <hr>
+                <!-- Linkedin Profile -->
+                <div class="form-group row">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    Linkedin Profile
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
+                    </div>
+                </div>
+                </div>
+
+                <!-- Github Profile -->
+                <div class="form-group row">
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                    Github Profile
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
+                    </div>
+                </div>
+                </div>
+
+                <hr>
+
                 <div class="form-group row">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-secondary">Sign in</button>
+                        <button type="submit" class="btn btn-success">Submit Application</button>
                     </div>
                 </div>
+
             </form>
         </div>
         <!-- jQuery -->
