updating for checking changes

--- a/test_page/form.html
+++ b/test_page/form.html
@@ -19,111 +19,114 @@
         </div>
         <div class="container jd">
         </div>
-        <div class="container jf">
-            <form>
-            <!-- first name -->
-                <div class="form-group row">
-                    <label for="firstname" class="col-sm-2 form-control-label">First Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="firstname" placeholder="">
-                    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
                 </div>
-            <!-- Last name -->
-                <div class="form-group row">
-                    <label for="lastname" class="col-sm-2 form-control-label">Last Name</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="lastname" placeholder="">
-                    </div>
-                </div>
-            <!-- Email -->
-                <div class="form-group row">
-                    <label for="inputEmail3" class="col-sm-2 form-control-label">Email</label>
-                    <div class="col-sm-10">
-                        <input type="email" class="form-control" id="inputEmail3" placeholder="">
-                    </div>
-                </div>
-            <!-- Phone number -->
-                <div class="form-group row">
-                    <label for="phone" class="col-sm-2 form-control-label">Phone Number</label>
-                    <div class="col-sm-10">
-
-                        <input type="tel" class="form-control" id="phonenumber" placeholder="">
-                    </div>
-                </div>
-            <!-- location -->
-                <div class="form-group row">
-                    <label for="location" class="col-sm-2 form-control-label">Location</label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" id="location" placeholder="">
-                    </div>
-                </div>
-            <!-- resume -->
-                <div class="form-group row">
-                    <label for="resume" class="col-sm-2 form-control-label">Resume/CV</label>
-                    <div class="col-sm-4">
-                    <label class="file">
-                      <input type="file" id="file">
-                      <span class="file-custom"></span>
-                    </label>
-                    </div>
-                    <div class="col-sm-6">
-                    <small class="text-muted">PDF and DOCX format are accepted</small>
-                    </div>
-                </div>
-            <!-- Cover letter -->
-                <div class="form-group row">
-                    <label for="coverletter" class="col-sm-2 form-control-label"></label>
-                    <div class="col-sm-10">
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        Why do you want to join Cozee ?
+                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 jf">
+                    <form>
+                        <!-- first name -->
+                        <div class="form-group row">
+                            <label for="firstname" class="col-sm-2 form-control-label">First Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="firstname" placeholder="">
+                            </div>
                         </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                        <!-- Last name -->
+                        <div class="form-group row">
+                            <label for="lastname" class="col-sm-2 form-control-label">Last Name</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="lastname" placeholder="">
+                            </div>
                         </div>
-                    </div>
-                    </div>
+                        <!-- Email -->
+                        <div class="form-group row">
+                            <label for="inputEmail3" class="col-sm-2 form-control-label">Email</label>
+                            <div class="col-sm-10">
+                                <input type="email" class="form-control" id="inputEmail3" placeholder="">
+                            </div>
+                        </div>
+                        <!-- Phone number -->
+                        <div class="form-group row">
+                            <label for="phone" class="col-sm-2 form-control-label">Phone Number</label>
+                            <div class="col-sm-10">
+                                <input type="tel" class="form-control" id="phonenumber" placeholder="">
+                            </div>
+                        </div>
+                        <!-- location -->
+                        <div class="form-group row">
+                            <label for="location" class="col-sm-2 form-control-label">Location</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="location" placeholder="">
+                            </div>
+                        </div>
+                        <!-- resume -->
+                        <div class="form-group row">
+                            <label for="resume" class="col-sm-2 form-control-label">Resume/CV</label>
+                            <div class="col-sm-4">
+                                <label class="file">
+                                    <input type="file" id="file">
+                                    <span class="file-custom"></span>
+                                </label>
+                            </div>
+                            <div class="col-sm-6">
+                                <small class="text-muted">PDF and DOCX format are accepted</small>
+                            </div>
+                        </div>
+                        <!-- Cover letter -->
+                        <div class="form-group row">
+                            <label for="coverletter" class="col-sm-2 form-control-label"></label>
+                            <div class="col-sm-10">
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        Why do you want to join Cozee ?
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <!-- Linkedin Profile -->
+                        <div class="form-group row">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                    Linkedin Profile
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                    <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Github Profile -->
+                        <div class="form-group row">
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                    Github Profile
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                    <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="form-group row">
+                            <div class="col-sm-offset-2 col-sm-10">
+                                <button type="submit" class="btn btn-success">Submit Application</button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <hr>
-                <!-- Linkedin Profile -->
-                <div class="form-group row">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    Linkedin Profile
-                    </div>
+                <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
                 </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
-                    </div>
-                </div>
-                </div>
-
-                <!-- Github Profile -->
-                <div class="form-group row">
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    Github Profile
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
-                    </div>
-                </div>
-                </div>
-
-                <hr>
-
-                <div class="form-group row">
-                    <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-success">Submit Application</button>
-                    </div>
-                </div>
-
-            </form>
+            </div>
         </div>
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
