--- a/test_page/form.html
+++ b/test_page/form.html
@@ -119,7 +119,7 @@
                         <hr>
                         <div class="form-group row">
                             <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success">Submit Application</button>
+                                <button type="submit" class="btn btn-success pull-xs-right">Submit Application</button>
                             </div>
                         </div>
                     </form>
