updating for checking changes

--- a/test_page/form.html
+++ b/test_page/form.html
@@ -10,16 +10,64 @@
         <link rel="stylesheet" href="css/formstyle.css">
     </head>
     <body>
-        <div class="container">
+        <div class="container" id="heading">
             <nav class="navbar navbar-light bg-faded">
                 <a class="navbar-brand" href="#">Cozee Logo</a>
             </nav>
             <h2>Job Opening</h2>
-            <hr>
-        </div>
-        <div class="container jd">
         </div>
         <div class="container">
+        <div class="row">
+            <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
+
+            </div>
+            <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+
+            <h3>Software Development Engineer in Test II-Last Mile</h3>
+            <h5>at Cozee <a href="#" title="">(View all jobs)</a></h5>
+            <b>Software Development Engineer Test II</b><br>
+            <b>Location: Bangalore,</b><br>
+            <b>Position Background:</b><br>
+            At Cozee we approach testing differently -- we are testing, and breaking, code constantly and help rebuild it better. Software Engineers in Test (SDET) devise smart testing strategies and write code to examine and validate large-scale software development and deployments. As an SDET, you would partner with software developers to create and code tests during product development. Your primary responsibilities are
+            <ul>
+                <li>To mitigate potential quality risks across SDLC through pragmatic test coverage</li>
+                <li>Create repeatability in testing through automation</li>
+                <li>Enable delivery through good planning, proactive communication and timely execution</li>
+            </ul>
+            At Cozee, high focus on Impact and Ownership allows for freedom to each to experiment and innovate. The pride is when you see the impact of what you have created. The ability to see what your contribution does to the business is a rare experience, add to that the fact that the impact of it is felt by your friends and family in India - the experience is extremely gratifying.
+            <br><b>Responsibilities:</b><br>
+            <ul>
+                <li>You are responsible for various dimensions of testing (functional/non-functional (performance, scalability, adverse etc.), ensuring quality experiences to our customers.</li>
+                <li>With your extensive technical expertise and judgment, you are an integrated part of the software development team and define, document, analyze, perform, and automate tests for products. You identify functional /non-functional issues and come up with creative resolutions.</li>
+                <li>You are responsible for adhering to best QA practices and improve the Quality of the products continuously</li>
+                <li>You are responsible to create repeatability that enable and validate high quality releases at a fast pace</li>
+            </ul>
+            <b>Must Have Skills:</b><br>
+            <ul>
+                <li>You have a strong technical background, are detail driven and have excellent problem solving abilities</li>
+                <li>Around 4+ years of experience in testing</li>
+                <li>You have exposure to distributed systems or web applications</li>
+                <li>You have excellent understanding of Testing life cycle, Test Processes</li>
+                <li>You have excellent product and testing acumen</li>
+                <li>You can write excellent automation code (Java/php/Ruby etc.)</li>
+                <li>Experience in working on Linux based environments.</li>
+                <li>Experience in test automation tools like junit, testng, phpunit, webdriver, jmeter, SoapUI etc</li>
+            </ul>
+            <b>Desired Skills:</b><br>
+            <ul>
+                <li>Good understating of Continuous Integration/Delivery</li>
+                <li>Contribution to open source projects in the Automation/QA is a plus</li>
+            </ul>
+            </div>
+        <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
+
+        </div>
+        </div>
+
+
+        </div>
+        <div class="container">
+            <hr>
             <div class="row">
                 <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
                 </div>
@@ -63,14 +111,11 @@
                         <!-- resume -->
                         <div class="form-group row">
                             <label for="resume" class="col-sm-2 form-control-label">Resume/CV</label>
-                            <div class="col-sm-4">
+                            <div class="col-sm-10">
                                 <label class="file">
                                     <input type="file" id="file">
                                     <span class="file-custom"></span>
                                 </label>
-                            </div>
-                            <div class="col-sm-6">
-                                <small class="text-muted">PDF and DOCX format are accepted</small>
                             </div>
                         </div>
                         <!-- Cover letter -->
