--- a/test_page/form.html
+++ b/test_page/form.html
@@ -79,48 +79,38 @@
 <hr>
                         <!-- first name -->
                         <div class="form-group row">
-                            <label for="firstname" class="col-sm-2 form-control-label">First Name</label>
+                            <label for="name" class="col-sm-2 form-control-label">Name <span style="color:red;">*</span></label>
                             <div class="col-sm-10">
-                                <input type="text" class="form-control" id="firstname" placeholder="">
-                            </div>
-                        </div>
-                        <!-- Last name -->
-                        <div class="form-group row">
-                            <label for="lastname" class="col-sm-2 form-control-label">Last Name</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="lastname" placeholder="">
+                                <input type="text" class="form-control" id="name" placeholder="">
                             </div>
                         </div>
                         <!-- Email -->
                         <div class="form-group row">
-                            <label for="inputEmail3" class="col-sm-2 form-control-label">Email</label>
+                            <label for="inputEmail3" class="col-sm-2 form-control-label">Email <span style="color:red;">*</span></label>
                             <div class="col-sm-10">
                                 <input type="email" class="form-control" id="inputEmail3" placeholder="">
                             </div>
                         </div>
                         <!-- Phone number -->
                         <div class="form-group row">
-                            <label for="phone" class="col-sm-2 form-control-label">Phone Number</label>
+                            <label for="phone" class="col-sm-2 form-control-label">Phone No. <span style="color:red;">*</span></label>
                             <div class="col-sm-10">
                                 <input type="tel" class="form-control" id="phonenumber" placeholder="">
                             </div>
                         </div>
-                        <!-- location -->
-                        <div class="form-group row">
-                            <label for="location" class="col-sm-2 form-control-label">Location</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="location" placeholder="">
-                            </div>
-                        </div>
                         <!-- resume -->
                         <div class="form-group row">
-                            <label for="resume" class="col-sm-2 form-control-label">Resume/CV</label>
-                            <div class="col-sm-10">
+                            <label for="resume" class="col-sm-2 form-control-label">Resume/CV<span style="color:red;">*</span></label>
+                            <div class="col-sm-6">
                                 <label class="file">
                                     <input type="file" id="file">
                                     <span class="file-custom"></span>
                                 </label>
                             </div>
+                            <div class="col-sm-4 pull-xs-right">
+                                Pdf or Docx
+                            </div>
+
                         </div>
                         <!-- Cover letter -->
                         <div class="form-group row">
@@ -128,7 +118,7 @@
                             <div class="col-sm-10">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                        Why do you want to join Cozee ?
+                                        Why do you want to join Cozee ? <span style="color:red;">*</span>
                                     </div>
                                 </div>
                                 <div class="row">
