updating for checking changes

--- a/test_page/form.html
+++ b/test_page/form.html
@@ -12,12 +12,12 @@
     <body>
         <div class="container" id="heading">
             <nav class="navbar navbar-light bg-faded">
-                <a class="navbar-brand" href="#">Cozee Logo</a>
+                <a class="navbar-brand" href="#"><img src="image/logo.png" width="14%" alt=""></a>
             </nav>
             <h2>Job Opening</h2>
         </div>
         <div class="container">
-        <div class="row">
+        <div class="row jd">
             <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
 
             </div>
