--- a/test_page/form.html
+++ b/test_page/form.html
@@ -4,166 +4,162 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Title Page</title>
+        <title>Job Form</title>
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://cdn.rawgit.com/twbs/bootstrap/v4-dev/dist/css/bootstrap.css">
         <link rel="stylesheet" href="css/formstyle.css">
     </head>
     <body>
-        <div class="container" id="heading">
-            <nav class="navbar navbar-light bg-faded">
-                <a class="navbar-brand" href="#"><img src="image/logo.png" width="14%" alt=""></a>
-            </nav>
-            <h2>Job Opening</h2>
-        </div>
-        <div class="container">
-        <div class="row jd">
-            <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
-
+        <div id="form">
+            <div class="container" id="heading">
+                <nav class="navbar navbar-light bg-faded">
+                    <a class="navbar-brand" href="#"><img src="image/logo.png" width="14%" alt=""></a>
+                </nav>
+                <h2>Job Opening</h2>
             </div>
-            <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
-
-            <h3>Software Development Engineer in Test II-Last Mile</h3>
-            <h5>at Cozee <a href="#" title="">(View all jobs)</a></h5>
-            <b>Software Development Engineer Test II</b><br>
-            <b>Location: Bangalore,</b><br>
-            <b>Position Background:</b><br>
-            At Cozee we approach testing differently -- we are testing, and breaking, code constantly and help rebuild it better. Software Engineers in Test (SDET) devise smart testing strategies and write code to examine and validate large-scale software development and deployments. As an SDET, you would partner with software developers to create and code tests during product development. Your primary responsibilities are
-            <ul>
-                <li>To mitigate potential quality risks across SDLC through pragmatic test coverage</li>
-                <li>Create repeatability in testing through automation</li>
-                <li>Enable delivery through good planning, proactive communication and timely execution</li>
-            </ul>
-            At Cozee, high focus on Impact and Ownership allows for freedom to each to experiment and innovate. The pride is when you see the impact of what you have created. The ability to see what your contribution does to the business is a rare experience, add to that the fact that the impact of it is felt by your friends and family in India - the experience is extremely gratifying.
-            <br><b>Responsibilities:</b><br>
-            <ul>
-                <li>You are responsible for various dimensions of testing (functional/non-functional (performance, scalability, adverse etc.), ensuring quality experiences to our customers.</li>
-                <li>With your extensive technical expertise and judgment, you are an integrated part of the software development team and define, document, analyze, perform, and automate tests for products. You identify functional /non-functional issues and come up with creative resolutions.</li>
-                <li>You are responsible for adhering to best QA practices and improve the Quality of the products continuously</li>
-                <li>You are responsible to create repeatability that enable and validate high quality releases at a fast pace</li>
-            </ul>
-            <b>Must Have Skills:</b><br>
-            <ul>
-                <li>You have a strong technical background, are detail driven and have excellent problem solving abilities</li>
-                <li>Around 4+ years of experience in testing</li>
-                <li>You have exposure to distributed systems or web applications</li>
-                <li>You have excellent understanding of Testing life cycle, Test Processes</li>
-                <li>You have excellent product and testing acumen</li>
-                <li>You can write excellent automation code (Java/php/Ruby etc.)</li>
-                <li>Experience in working on Linux based environments.</li>
-                <li>Experience in test automation tools like junit, testng, phpunit, webdriver, jmeter, SoapUI etc</li>
-            </ul>
-            <b>Desired Skills:</b><br>
-            <ul>
-                <li>Good understating of Continuous Integration/Delivery</li>
-                <li>Contribution to open source projects in the Automation/QA is a plus</li>
-            </ul>
-            </div>
-        <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
-
-        </div>
-        </div>
-
-
-        </div>
-        <div class="container">
-            <hr>
-            <div class="row">
-                <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
+            <div class="container">
+                <div class="row jd">
+                    <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
+                    </div>
+                    <div class="col-xs-12 col-sm-10 col-md-10 col-lg-10">
+                        <h3>Software Development Engineer in Test II-Last Mile</h3>
+                        <h5>at Cozee <a href="#" title="">(View all jobs)</a></h5>
+                        <b>Software Development Engineer Test II</b><br>
+                        <b>Location: Bangalore,</b><br>
+                        <b>Position Background:</b><br>
+                        At Cozee we approach testing differently -- we are testing, and breaking, code constantly and help rebuild it better. Software Engineers in Test (SDET) devise smart testing strategies and write code to examine and validate large-scale software development and deployments. As an SDET, you would partner with software developers to create and code tests during product development. Your primary responsibilities are
+                        <ul>
+                            <li>To mitigate potential quality risks across SDLC through pragmatic test coverage</li>
+                            <li>Create repeatability in testing through automation</li>
+                            <li>Enable delivery through good planning, proactive communication and timely execution</li>
+                        </ul>
+                        At Cozee, high focus on Impact and Ownership allows for freedom to each to experiment and innovate. The pride is when you see the impact of what you have created. The ability to see what your contribution does to the business is a rare experience, add to that the fact that the impact of it is felt by your friends and family in India - the experience is extremely gratifying.
+                        <br><b>Responsibilities:</b><br>
+                        <ul>
+                            <li>You are responsible for various dimensions of testing (functional/non-functional (performance, scalability, adverse etc.), ensuring quality experiences to our customers.</li>
+                            <li>With your extensive technical expertise and judgment, you are an integrated part of the software development team and define, document, analyze, perform, and automate tests for products. You identify functional /non-functional issues and come up with creative resolutions.</li>
+                            <li>You are responsible for adhering to best QA practices and improve the Quality of the products continuously</li>
+                            <li>You are responsible to create repeatability that enable and validate high quality releases at a fast pace</li>
+                        </ul>
+                        <b>Must Have Skills:</b><br>
+                        <ul>
+                            <li>You have a strong technical background, are detail driven and have excellent problem solving abilities</li>
+                            <li>Around 4+ years of experience in testing</li>
+                            <li>You have exposure to distributed systems or web applications</li>
+                            <li>You have excellent understanding of Testing life cycle, Test Processes</li>
+                            <li>You have excellent product and testing acumen</li>
+                            <li>You can write excellent automation code (Java/php/Ruby etc.)</li>
+                            <li>Experience in working on Linux based environments.</li>
+                            <li>Experience in test automation tools like junit, testng, phpunit, webdriver, jmeter, SoapUI etc</li>
+                        </ul>
+                        <b>Desired Skills:</b><br>
+                        <ul>
+                            <li>Good understating of Continuous Integration/Delivery</li>
+                            <li>Contribution to open source projects in the Automation/QA is a plus</li>
+                        </ul>
+                    </div>
+                    <div class="col-xs-0 col-sm-1 col-md-1 col-lg-1">
+                    </div>
                 </div>
-                <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 jf">
-                    <form>
-                        <div class="page-header">
-  <h4>Apply for this job <small class="pull-xs-right"><span style="color:red;">*</span>Required</small></h4>
-</div>
-<hr>
-                        <!-- first name -->
-                        <div class="form-group row">
-                            <label for="name" class="col-sm-2 form-control-label">Name <span style="color:red;">*</span></label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="name" placeholder="">
+            </div>
+            <div class="container">
+                <hr>
+                <div class="row">
+                    <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 jf">
+                        <form>
+                            <div class="page-header">
+                                <h4>Apply for this job <small class="pull-xs-right"><span style="color:red;">*</span>Required</small></h4>
                             </div>
-                        </div>
-                        <!-- Email -->
-                        <div class="form-group row">
-                            <label for="inputEmail3" class="col-sm-2 form-control-label">Email <span style="color:red;">*</span></label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" id="inputEmail3" placeholder="">
+                            <hr>
+                            <!-- first name -->
+                            <div class="form-group row">
+                                <label for="name" class="col-sm-2 form-control-label">Name <span style="color:red;">*</span></label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="name" placeholder="">
+                                </div>
                             </div>
-                        </div>
-                        <!-- Phone number -->
-                        <div class="form-group row">
-                            <label for="phone" class="col-sm-2 form-control-label">Phone No. <span style="color:red;">*</span></label>
-                            <div class="col-sm-10">
-                                <input type="tel" class="form-control" id="phonenumber" placeholder="">
+                            <!-- Email -->
+                            <div class="form-group row">
+                                <label for="inputEmail3" class="col-sm-2 form-control-label">Email <span style="color:red;">*</span></label>
+                                <div class="col-sm-10">
+                                    <input type="email" class="form-control" id="inputEmail3" placeholder="">
+                                </div>
                             </div>
-                        </div>
-                        <!-- resume -->
-                        <div class="form-group row">
-                            <label for="resume" class="col-sm-2 form-control-label">Resume/CV<span style="color:red;">*</span></label>
-                            <div class="col-sm-6">
-                                <label class="file">
-                                    <input type="file" id="file">
-                                    <span class="file-custom"></span>
-                                </label>
+                            <!-- Phone number -->
+                            <div class="form-group row">
+                                <label for="phone" class="col-sm-2 form-control-label">Phone No. <span style="color:red;">*</span></label>
+                                <div class="col-sm-10">
+                                    <input type="tel" class="form-control" id="phonenumber" placeholder="">
+                                </div>
                             </div>
-                            <div class="col-sm-4 pull-xs-right">
-                                Pdf or Docx
+                            <!-- resume -->
+                            <div class="form-group row">
+                                <label for="resume" class="col-sm-2 form-control-label">Resume/CV<span style="color:red;">*</span></label>
+                                <div class="col-sm-6">
+                                    <label class="file">
+                                        <input type="file" id="file">
+                                        <span class="file-custom"></span>
+                                    </label>
+                                </div>
+                                <div class="col-sm-4 pull-xs-right">
+                                    Pdf or Docx
+                                </div>
                             </div>
-
-                        </div>
-                        <!-- Cover letter -->
-                        <div class="form-group row">
-                            <label for="coverletter" class="col-sm-2 form-control-label"></label>
-                            <div class="col-sm-10">
+                            <!-- Cover letter -->
+                            <div class="form-group row">
+                                <label for="coverletter" class="col-sm-2 form-control-label"></label>
+                                <div class="col-sm-10">
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            Why do you want to join Cozee ? <span style="color:red;">*</span>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                            <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <hr>
+                            <!-- Linkedin Profile -->
+                            <div class="form-group row">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                        Why do you want to join Cozee ? <span style="color:red;">*</span>
+                                        Linkedin Profile
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                        <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
+                                        <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <hr>
-                        <!-- Linkedin Profile -->
-                        <div class="form-group row">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    Linkedin Profile
+                            <!-- Github Profile -->
+                            <div class="form-group row">
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        Github Profile
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
+                            <hr>
+                            <div class="form-group row">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <button type="submit" class="btn btn-success pull-xs-right">Submit Application</button>
                                 </div>
                             </div>
-                        </div>
-                        <!-- Github Profile -->
-                        <div class="form-group row">
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    Github Profile
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <input type="text" class="form-control" id="location" placeholder="Enter your profile URL">
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="form-group row">
-                            <div class="col-sm-offset-2 col-sm-10">
-                                <button type="submit" class="btn btn-success pull-xs-right">Submit Application</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
+                        </form>
+                    </div>
+                    <div class="col-xs-0 col-sm-2 col-md-2 col-lg-2">
+                    </div>
                 </div>
             </div>
         </div>
